# djangoShop

./: .env  .gitignore  Dockerfile  README.MD  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
api/: __init__.py  apps.py  serializers.py  urls.py  views.py
app_lk/: __init__.py  apps.py  forms.py  urls.py  views.py
app_shop/: __init__.py  admin.py  apps.py  cart.py  choices.py  forms.py  models.py  urls.py  views.py
app_shop/migrations/: 0001_initial.py  0002_alter_sellerdata_type.py  0002_alter_user_access.py  0003_alter_user_email.py  0003_alter_user_managers.py  0003_alter_user_managers_user_groups_user_is_superuser_and_more.py  0004_alter_product_category.py  0004_alter_user_managers.py  0005_alter_product_category_alter_product_size_and_more.py  0005_sellerdata.py  0006_alter_address_apartment_number.py  0006_alter_comment_product_alter_productorder_order_and_more.py  0007_product_seller.py  0007_sellerdata_email.py  0008_alter_user_access.py  0008_remove_order_seller.py  0009_alter_user_access.py  0009_productorder_price.py  0010_alter_address_apartment_number_alter_comment_text_and_more.py  0010_alter_sellerdata_reg_date.py  0011_alter_order_status_alter_product_quantity.py  0012_alter_sellerdata_options_alter_order_status_and_more.py  0013_alter_order_status_alter_product_category_and_more.py  0014_alter_comment_product_alter_comment_user_and_more.py
app_users/: __init__.py  admin.py  apps.py  forms.py  tasks.py  urls.py  views.py
djangoShop/: __init__.py  celery.py  settings.py  urls.py
templates/: base.html
(+25 files in other folders)
